Fix page container style, so it will not be covered by footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -339,7 +339,8 @@ footer p {
   display: flex;
   align-items: center;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-around;
+  margin-bottom: 100px;
 }
 
 .countries_page img {
